--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 200px;
   min-height: 100vh;
 }
 
@@ -67,7 +67,8 @@ button:focus-visible {
 }
 
 .container {
-  width: 1000px;
+  width: 100vw;
+  padding-left: 200px;
 }
 
 .card-container {
@@ -105,4 +106,47 @@ button:focus-visible {
 table {
   margin: 0 auto;
   border-spacing: 15px;
+}
+
+/* SIDEBAR STYLES */
+.sidebar {
+  left: 0;
+  top: 0;
+  position: fixed;
+  height: 100vh;
+}
+
+.sidebar_items {
+  background-color: #333;
+  color: white;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  padding-top: 100px;
+  height: 100%;
+}
+
+.sidebar_item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.sidebar_item:hover {
+  background-color: #555;
+}
+
+.sidebar_item p {
+  font-size: 1.4rem;
+}
+
+/* CHARTS */
+.chart-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
